<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
     >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_ename"
        android:textSize="15dp"
        android:layout_gravity="left"
        android:layout_marginLeft="35dp"
        android:textColor="@color/colorBg"
        android:layout_marginBottom="15dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/edittextshape"
        android:inputType="text"
        android:hint="@string/str_ename"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/colorGray"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center_horizontal"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_eemail"
        android:textSize="15dp"
        android:layout_gravity="left"
        android:layout_marginLeft="35dp"
        android:textColor="@color/colorBg"
        android:layout_marginBottom="15dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/edittextshape"
        android:inputType="textEmailAddress"
        android:hint="@string/str_eemail"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/colorGray"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center_horizontal"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_epassword"
        android:textSize="15dp"
        android:layout_gravity="left"
        android:layout_marginLeft="35dp"
        android:textColor="@color/colorBg"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/edittextshape"
        android:inputType="textPassword"
        android:hint="@string/str_epassword"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/colorGray"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_erepassword"
        android:textSize="15dp"
        android:layout_gravity="left"
        android:layout_marginLeft="35dp"
        android:textColor="@color/colorBg"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/edittextshape"
        android:inputType="textPassword"
        android:hint="@string/str_erepassword"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/colorGray"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center_horizontal"
        />

<Button
    android:id="@+id/btn_signup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/btn_signup"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:background="@drawable/shape"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/tview_member"
            android:textSize="16dp"
            android:textColor="@color/colorBg"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/btn_signin"
            android:background="@drawable/shape"
            android:textColor="@color/colorBg"
            android:layout_marginLeft="18dp"
            android:textStyle="bold"
            />

    </LinearLayout>



</LinearLayout>
